# UCM_TFM_Pipeline_datalakehouse

./: .gitignore  README.md  pyproject.toml
Src/motor_ingesta/: bronze_stream_writer.py  funciones_aux.py  kafka_stream_reader.py  landing_stream_reader.py
