[Build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UCM_master_diseno_ingestas"
version = "0.0.1"
dependencies = [
  "pyspark==3.5.0",
  "pandas==2.2.1",
    "loguru==0.7.1",
    "pillow==12.2.0"
]
requires-python = ">=3.8"
readme = "README.md"
authors = [
	{name = "Facundo Goncalves", email = "kundogb@gmail.com"}
]
maintainers = [
  {name = "Facundo Goncalves", email = "kundogb@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["src"]